--- a/src/css/flux.css
+++ b/src/css/flux.css
@@ -542,7 +542,7 @@ svg {
 #home-page-wrapper {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 50px 2.5fr 1fr 1fr 98px 100px;
+    grid-template-rows: 50px 2.5fr 2fr 2fr 60vh 100px;
     height: 100vh;
 }
 
@@ -619,6 +619,36 @@ svg {
     letter-spacing: 1px;
 }
 
+#home-hero-video {
+    width: 70%;
+    max-width: 70%;
+    padding: 0;
+    box-sizing: border-box;
+    display: none;
+    height: 100%;
+    max-height: 100%;
+    margin: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--background-color-2);
+    border: 1px solid var(--border-color);
+}
+
+#home-hero-video.active {
+    display: flex;
+}
+
+.home-hero--video {
+    width: 100%;
+    max-width: none;
+    max-height: none;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+    background-color: var(--background-color);
+}
+
 .protocol-switch.on {
     color: var(--foreground-color);
 }
@@ -665,6 +695,7 @@ svg {
 .data-tiles {
     position: relative;
     grid-row: 2;
+    padding-top: 8px;
 
     font-size: 1rem;
     --data-tile--heading-font-size: 1.0em;
@@ -889,6 +920,10 @@ z-stack-item.active {
 }
 #graph-power {
     overflow: hidden;
+    min-height: 10.5vh;
+}
+#graph-workout {
+    min-height: 12.5vh;
 }
 
 div.graph--bar-group {
@@ -1136,11 +1171,26 @@ auto-start-counter {
 
     --number-input-font-size: 1.2em;
     --number-input-value-font-size: 1.4em;
+    height: 44.5vh;
+    max-height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .targets--cont {
     margin: 0 auto;
     max-width: var(--inner-max-width);
+}
+
+.targets--cont.video-target {
+    max-width: none;
+    width: 100%;
+    height: 100%;
+    padding: 12px 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mode-selector {
@@ -2519,7 +2569,7 @@ planned-list {
 workout-graph-svg {
     display: block;
     margin: 0 auto;
-    height: 8em;
+    height: 16em;
     max-width: 100%;
     margin: 0 auto;
 }
@@ -2828,7 +2878,7 @@ and (max-width: 340px)
 and (max-height: 620px) {
     /* Home Page MQ */
     #home-page-wrapper {
-        grid-template-rows: 40px 2fr 1fr 1fr 70px 80px;
+        grid-template-rows: 40px 2fr 2fr 2fr 60vh 80px;
     }
 
     .data-tiles {
@@ -2941,7 +2991,7 @@ and (min-height: 1024px)
 and (orientation: portrait) {
     /* Home Page MQ */
     #home-page-wrapper {
-        grid-template-rows: 50px 2.5fr 1fr 1fr 108px 100px;
+        grid-template-rows: 50px 2.5fr 2fr 2fr 60vh 100px;
     }
 
     .data-tiles {
@@ -3027,7 +3077,7 @@ and (min-width: 1024px)
 and (min-height: 768px) {
     /* Home Page MQ */
     #home-page-wrapper {
-        grid-template-rows: 50px 2fr 1fr 1fr 98px 100px;
+        grid-template-rows: 50px 2fr 2fr 2fr 60vh 100px;
     }
 
     .data-tiles {
@@ -3045,7 +3095,7 @@ and (min-width: 1024px)
 and (min-height: 1366px) {
     /* Home Page MQ */
     #home-page-wrapper {
-        grid-template-rows: 50px 2.5fr 1fr 1fr 108px 100px;
+        grid-template-rows: 50px 2.5fr 2fr 2fr 60vh 100px;
     }
 
     .data-tiles {
@@ -3127,7 +3177,7 @@ and (min-height: 850px) {
     /* FHD */
 
     #home-page-wrapper {
-        grid-template-rows: 5em 2.5fr 1fr 1fr 14em 14em;
+        grid-template-rows: 5em 2.5fr 2fr 2fr 60vh 14em;
     }
 
     .connections-header {
@@ -3185,7 +3235,7 @@ and (min-height: 900px) {
     /* FHD */
 
     #home-page-wrapper {
-        grid-template-rows: 6em 2.5fr 1fr 1fr 16em 16em;
+        grid-template-rows: 6em 2.5fr 2fr 2fr 60vh 16em;
     }
 
     .connections-header {
@@ -3219,7 +3269,7 @@ and (min-width: 2400px)
 and (min-height: 1200px) {
     /* QHD */
     #home-page-wrapper {
-        grid-template-rows: 6em 2.5fr 1fr 1fr 16em 16em;
+        grid-template-rows: 6em 2.5fr 2fr 2fr 60vh 16em;
     }
 
     .connections-header {
@@ -3283,7 +3333,7 @@ and (min-height: 1600px) {
     /* 4K UHD */
 
     #home-page-wrapper {
-        grid-template-rows: 10em 2.5fr 1fr 1fr 24em 24em;
+        grid-template-rows: 10em 2.5fr 2fr 2fr 60vh 24em;
     }
 
     .data-tiles {
@@ -3326,7 +3376,7 @@ and (orientation: landscape) {
     #home-page-wrapper {
         display: grid;
         grid-template-columns: 50px 1fr 1fr;
-        grid-template-rows: 2fr 1fr 1fr 50px;
+        grid-template-rows: 2fr 2fr 60vh 50px;
     }
 
     page-group {
@@ -3420,6 +3470,7 @@ and (orientation: landscape) {
 
     #graph-workout {
         grid-area: 3 / 2 / 3 / 4;
+        min-height: 12.5vh;
     }
 
     #targets {
@@ -3564,6 +3615,7 @@ and (min-width: 1024px) {
         grid-area: 1 / 1 / 3 / 2;
         max-width: 100%;
         max-height: 100%;
+        min-height: 12.5vh;
     }
 
     #graph-power {
@@ -3688,4 +3740,3 @@ and (min-width: 1900px) {
     }
 }
 /* END Media Queries */
-
